--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/MyMaterialTheme">
-        <activity android:name=".Activities.MainActivity">
+        <activity android:name=".Activities.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +20,8 @@
         >
         <activity android:name=".Activities.EventActivity" />
         <activity android:name=".Activities.EventCreateActivity" />
-        <activity android:name=".Activities.EventDetails"></activity>
+        <activity android:name=".Activities.EventDetails" />
+        <activity android:name=".Activities.MainActivity"></activity>
     </application>
 
 </manifest>
