--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,10 +26,14 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:25.3.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.android.support:design:25.3.1'
+
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
+    compile 'com.android.support:support-v4:25.3.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
