--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
         <activity android:name=".Activities.RegisterActivity" />
         >
-        <activity android:name=".Activities.EventActivity" />
+        <activity android:name=".Activities.SlideBarActivity" />
         <activity android:name=".Activities.EventCreateActivity" />
         <activity android:name=".Activities.EventDetails" />
         <activity android:name=".Activities.MainActivity"></activity>
